Add desktop view

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <div class="body pb-6">
-  <div class="header fixed pl-3 pt-1 pr-5 flex justify-between items-center">
+  <div class="header fixed pl-3 pt-1 pr-5 flex justify-between items-center lg:relative">
     <div class="z-10 logo">
       <img src="../../assets/bb logo.png" alt="" />
     </div>
@@ -13,13 +13,19 @@
     </div>
   </div>
 
-  <div>
+  <div class="lg:hidden">
     <img src="../../assets/bbg1.jpg" alt="" />
   </div>
 
-  <div class="pl-4 pr-4 pt-4 mb-4">
-    <p class="font-bold headline text-4xl">Adding Moments of Perfect Sip</p>
-    <p class="mt-4 text-white text-base xl:text-xl">
+  <div class="z-0 absolute hidden lg:block">
+    <img src="../../assets/bg-lg.jpg" alt="" />
+  </div>
+
+  <div class="empty-space"></div>
+
+  <div class="pl-4 pr-4 pt-4 mb-4 lg:relative">
+    <p class="font-bold headline text-4xl xl:text-7xl">Adding Moments of Perfect Sip</p>
+    <p class="description mt-4 text-white text-base xl:text-xl">
       Lorem ipsum dolor sit amet. Ut soluta accusamus et nulla accusamus ex
       assumenda odit. Aut tenetur laudantium non Quis facere a nihil dignissimos
       et placeat debitis ut amet dolor.
