--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -11,6 +11,10 @@
     @media (min-width: 376px) {
       height: auto;
     }
+
+    @media (min-width: 1024px) {
+      height: 100vh;
+    }
   }
 
   .header {
@@ -31,7 +35,7 @@
     max-width: 60px;
 
     @media (min-width: 1024px) {
-      max-width: 800px;
+      max-width: 80px;
     }
   }
 
@@ -48,5 +52,22 @@
     height: 40px;
     color: #fffffe;
     background-color: #be6d1b;
+  }
+
+  .empty-space {
+
+    @media (min-width: 1024px) {
+      height: 450px;
+    }
+
+    @media (min-width: 1440px) {
+      height: 600px;
+    }
+  }
+
+  .description {
+    @media (min-width: 1024px) {
+      max-width: 600px;
+    }
   }
 }
